Updated the HTML file name and made a CSS sheet

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=J, initial-scale=1.0">
     <title>Joseph Paul Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <!--Name & Tag Line-->
@@ -21,6 +22,8 @@
             <li>Python</li>
             <li>HTML/CSS</li>
             <li>JavaScript</li>
+        </ul>
+        <ul>
             <li>Military</li>
             <li>First Responder</li>
             <li>Dog Whisperer</li>
