Font change, centering elements, creating a quote

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
     <!--Name & Tag Line-->
 
-    <h1>Joseph Paul</h1>
-    <h3>GET HYPE</h3>
+    <h1 class="name">Joseph Paul</h1>
+    <h3 class="quote">CHOP WOOD, CARRY WATER.</h3>
 
 <!--List of skills-->
 
-    <h2>Software Engineer Intern @ Shopify</h2>
+    <h2 class="job">Software Engineer Intern @ Shopify</h2>
     <h3>Skills:</h3>
         <ul>
             <li>Python</li>
