More boxes getting flexed and centered

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 <!--List of skills-->
 
     <h2 class="job">Software Engineer Intern @ Shopify</h2>
-    <h3>Skills:</h3>
-        <ul>
+    <h3 class="skills">Skills:</h3>
+        <ul class="skills-top">
             <li>Python</li>
             <li>HTML/CSS</li>
             <li>JavaScript</li>
         </ul>
-        <ul>
+        <ul class="skills-bottom">
             <li>Military</li>
             <li>First Responder</li>
             <li>Dog Whisperer</li>
@@ -31,7 +31,7 @@
 
 <!--About me section-->
 
-    <h3>Background:</h3>
+    <h3 class="background">Background:</h3>
 
         <p>Energetic leader seeking to leverage extensive project management experience 
             and recent MBA education in full-stack engineer role. Innovator and creative 
@@ -43,9 +43,9 @@
 
 <!--Online Presence (LinkedIn, GitHub, Threads)-->
 
-    <h3>Let's Connect!</h3>
+    <h3 class="connect">Let's Connect!</h3>
 
-        <ul>
+        <ul class="contact">
             <li><a href="https://www.linkedin.com/in/joespaul13/">LinkedIn</a></li>
             <li><a href="https://github.com/joemiddie13">GitHub</a></li>
             <li><a href="https://www.threads.net/@joemiddie13">Threads</a></li>
