Added padding, margin, and background image.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <!--Background Image-->
+    <img src="joe-and-rocko.jpeg" alt="Joe & his dog, Rocko">
     <!--Name & Tag Line-->
 
     <h1 class="name">Joseph Paul</h1>
@@ -51,6 +53,7 @@
             <li><a href="https://www.threads.net/@joemiddie13">Threads</a></li>
             <li><a href="mailto:joespaul13@gmail.com">Email Me!</a></li>
         </ul>
+    
 
 </body>
 </html>
