Tightened up text and overall look.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <!--List of skills-->
 
-        <h2 class="job">Software Engineer Intern @ Shopify</h2>
+        <h2 class="job">Software Engineer Intern <br> @ Shopify</h2>
         <h3 class="skills">Skills:</h3>
             <ul class="skills-top">
                 <li>Python</li>
@@ -35,7 +35,7 @@
 
         <h3 class="background">Background:</h3>
 
-        <p>
+        <p class="background-text">
             Energetic leader seeking to leverage extensive project management experience 
             and recent MBA education in full-stack engineer role. Innovator and creative 
             problem solver passionate about enhancing user experiences, building and 
