Updated my list of skills into a flex:grid

--- a/index.html
+++ b/index.html
@@ -20,12 +20,10 @@
 
         <h2 class="job">Software Engineer Intern <br> @ Shopify</h2>
         <h3 class="skills">Skills:</h3>
-            <ul class="skills-top">
+            <ul class="skills-list">
                 <li>Python</li>
                 <li>HTML/CSS</li>
                 <li>JavaScript</li>
-            </ul>
-            <ul class="skills-bottom">
                 <li>Military</li>
                 <li>First Responder</li>
                 <li>Dog Whisperer</li>
