Converting contact text to icons

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li>JavaScript</li>
                 <li>Military</li>
                 <li>First Responder</li>
-                <li>Dog Whisperer</li>
+                <li>Dog Dad</li>
             </ul>
 
 <!--About me section-->
@@ -48,10 +48,15 @@
     <h3 class="connect">Let's Connect!</h3>
 
         <ul class="contact">
-            <li><a href="https://www.linkedin.com/in/joespaul13/">LinkedIn</a></li>
-            <li><a href="https://github.com/joemiddie13">GitHub</a></li>
-            <li><a href="https://www.threads.net/@joemiddie13">Threads</a></li>
-            <li><a href="mailto:joespaul13@gmail.com">Email Me!</a></li>
+            <!--<li><a href="https://www.linkedin.com/in/joespaul13/"><img src="icons/linkedin.png" style="width: 100px;height: 100px;"></a></li>
+            <li><a href="https://github.com/joemiddie13"><img src="icons/github.png" style="width: 100px;height: 100px;"></a></li>
+            <li><a href="https://www.threads.net/@joemiddie13"><img src="icons/threads.png" style="width: 60px; height: 60px;"></a></li>
+            <li><a href="mailto:joespaul13@gmail.com"><img src="icons/email.png" style="width: 60px; height: 60px;"></a></li>-->
+            
+            <li><a href="https://www.linkedin.com/in/joespaul13/"><img src="icons/linkedin.png"></a></li>
+            <li><a href="https://www.linkedin.com/in/joespaul13/"><img src="icons/github.png"></a></li>
+            <li><a href="https://www.linkedin.com/in/joespaul13/"><img src="icons/threads.png"></a></li>
+            <li><a href="https://www.linkedin.com/in/joespaul13/"><img src="icons/email.png"></a></li>
         </ul>
 </div>
 
