--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
             <li><a href="https://www.threads.net/@joemiddie13"><img src="icons/threads.png" style="width: 60px; height: 60px;"></a></li>
             <li><a href="mailto:joespaul13@gmail.com"><img src="icons/email.png" style="width: 60px; height: 60px;"></a></li>-->
             
-            <li><a href="https://www.linkedin.com/in/joespaul13/"><img src="icons/linkedin.png"></a></li>
-            <li><a href="https://www.linkedin.com/in/joespaul13/"><img src="icons/github.png"></a></li>
-            <li><a href="https://www.linkedin.com/in/joespaul13/"><img src="icons/threads.png"></a></li>
-            <li><a href="https://www.linkedin.com/in/joespaul13/"><img src="icons/email.png"></a></li>
+            <li><a href="https://www.linkedin.com/in/joespaul13/"><img src="icons/linkedin.png" class="icons"></a></li>
+            <li><a href="https://www.linkedin.com/in/joespaul13/"><img src="icons/github.png" class="icons"></a></li>
+            <li><a href="https://www.linkedin.com/in/joespaul13/"><img src="icons/threads.png" class="icons"></a></li>
+            <li><a href="https://www.linkedin.com/in/joespaul13/"><img src="icons/email.png" class="icons"></a></li>
         </ul>
 </div>
 
